Java 17 support in Windows Batch launcher